k8s/glances/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glances
  labels:
    name: glances
