k8s/glances/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-lb
  namespace: ingress
  # namespace: radarr
  annotations:
    metallb.universe.tf/allow-shared-ip: "radarr-shared-ip"
spec:
  selector:
    # app: radarr
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.1.4
  ports:
    - name: radarr
      protocol: TCP
      port: 7878
      targetPort: 7878
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: radarr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: radarr.homeserver.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
